# xvc

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  xvc_vs2015.sln
app/: CMakeLists.txt
app/xvc_dec_app/: decoder_app.cc  decoder_app.h  main_dec.cc  xvc_dec_app.vcxproj  xvc_dec_app.vcxproj.filters  y4m_writer.cc  y4m_writer.h
app/xvc_enc_app/: encoder_app.cc  encoder_app.h  main_enc.cc  xvc_enc_app.vcxproj  xvc_enc_app.vcxproj.filters  y4m.cc  y4m.h  y4m_reader.cc  y4m_reader.h
cmake/: xvc.pc.in
docs/: coding_guideline.md
src/: CMakeLists.txt
src/xvc_common_lib/: cabac.cc  cabac.h  checksum.cc  checksum.h  coding_unit.cc  coding_unit.h  common.cc  common.h  context_model.cc  context_model.h  cu_types.h  deblocking_filter.cc  deblocking_filter.h  inter_prediction.cc  inter_prediction.h  intra_prediction.cc  intra_prediction.h  picture_data.cc  picture_data.h  picture_types.h  quantize.cc  quantize.h  reference_list_sorter.h  reference_picture_lists.cc  reference_picture_lists.h  resample.cc  resample.h  restrictions.cc  restrictions.h  sample_buffer.h  segment_header.cc  segment_header.h  simd_cpu.cc  simd_cpu.h  simd_functions.cc  simd_functions.h  transform.cc  transform.h  transform_data.cc  transform_data.h  (+8 more)
src/xvc_common_lib/simd/: inter_prediction_simd.cc  inter_prediction_simd.h  resampler_simd.cc  resampler_simd.h  xvc_common_lib_simd.vcxproj  xvc_common_lib_simd.vcxproj.filters
src/xvc_dec_lib/: bit_reader.cc  bit_reader.h  cu_decoder.cc  cu_decoder.h  cu_reader.cc  cu_reader.h  decoder.cc  decoder.h  entropy_decoder.cc  entropy_decoder.h  picture_decoder.cc  picture_decoder.h  segment_header_reader.cc  segment_header_reader.h  syntax_reader.cc  syntax_reader.h  thread_decoder.cc  thread_decoder.h  xvc_dec_lib.vcxproj  xvc_dec_lib.vcxproj.filters  xvcdec.cc  xvcdec.h
src/xvc_enc_lib/: bit_writer.cc  bit_writer.h  cu_cache.cc  cu_cache.h  cu_encoder.cc  cu_encoder.h  cu_writer.cc  cu_writer.h  encoder.cc  encoder.h  encoder_settings.cc  encoder_settings.h  encoder_simd_functions.cc  encoder_simd_functions.h  entropy_encoder.cc  entropy_encoder.h  inter_search.cc  inter_search.h  inter_tz_search.cc  inter_tz_search.h  intra_search.cc  intra_search.h  picture_encoder.cc  picture_encoder.h  rdo_quant.cc  rdo_quant.h  sample_metric.cc  sample_metric.h  segment_header_writer.cc  segment_header_writer.h  speed_settings.h  syntax_writer.cc  syntax_writer.h  thread_encoder.cc  thread_encoder.h  transform_encoder.cc  transform_encoder.h  xvc_enc_lib.vcxproj  xvc_enc_lib.vcxproj.filters  xvcenc.cc  (+1 more)
src/xvc_enc_lib/simd/: sample_metric_simd.cc  sample_metric_simd.h
test/: CMakeLists.txt
test/googletest/include/gtest/: gtest.h
test/googletest/src/: gtest-all.cc
test/xvc_test/: all_intra_test.cc  bitstream_versioning_test.cc  checksum_enc_dec_test.cc  decoder_api_test.cc  decoder_helper.h  decoder_resample_test.cc  decoder_scalability_test.cc  encode_decode_test.cc  encoder_api_test.cc  encoder_helper.h  hls_test.cc  resampler_test.cc  residual_coding_test.cc  resolution_test.cc  restrictions_test.cc  simd_test.cc  test_helper.h  transform_test.cc  xvc_test.vcxproj  xvc_test.vcxproj.filters  yuv_helper.cc  yuv_helper.h
